--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>ich</groupId>
-  <artifactId>bins</artifactId>
+  <groupId>com.github.h908714124</groupId>
+  <artifactId>aws-glacier-multipart-upload</artifactId>
   <version>1.0-SNAPSHOT</version>
   <build>
     <plugins>
@@ -48,13 +48,13 @@
     <dependency>
       <groupId>com.github.h908714124</groupId>
       <artifactId>jbock</artifactId>
-      <version>1.6</version>
+      <version>1.8</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>com.amazonaws</groupId>
       <artifactId>aws-java-sdk</artifactId>
-      <version>1.11.118</version>
+      <version>1.11.150</version>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
