--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,12 @@
   <groupId>com.github.h908714124</groupId>
   <artifactId>aws-glacier-multipart-upload</artifactId>
   <version>1.0-SNAPSHOT</version>
+
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <jbock.version>2.3</jbock.version>
+  </properties>
+
   <build>
     <plugins>
       <plugin>
@@ -14,8 +20,15 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.7.0</version>
         <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
+          <source>9</source>
+          <target>9</target>
+          <annotationProcessorPaths>
+            <dependency>
+              <groupId>com.github.h908714124</groupId>
+              <artifactId>jbock</artifactId>
+              <version>${jbock.version}</version>
+            </dependency>
+          </annotationProcessorPaths>
         </configuration>
       </plugin>
       <plugin>
@@ -48,13 +61,13 @@
     <dependency>
       <groupId>com.github.h908714124</groupId>
       <artifactId>jbock</artifactId>
-      <version>2.2.1</version>
+      <version>${jbock.version}</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>com.amazonaws</groupId>
       <artifactId>aws-java-sdk</artifactId>
-      <version>1.11.233</version>
+      <version>1.11.264</version>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
