--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 plugins {
+    id 'com.github.johnrengelman.shadow' version '5.1.0'
     id "application"
 }
 
@@ -10,11 +11,21 @@ repositories {
 
 dependencies {
     compileOnly "com.github.h908714124:jbock-annotations:2.2"
-    testCompile "org.junit.jupiter:junit-jupiter:5.5.0-M1"
-    annotationProcessor "com.github.h908714124:jbock:2.7.1"
+    testCompile "org.junit.jupiter:junit-jupiter:5.5.1"
+    annotationProcessor "com.github.h908714124:jbock:2.7.2"
     compile 'org.apache.logging.log4j:log4j-api:2.11.2'
     compile 'org.apache.logging.log4j:log4j-core:2.11.2'
-    compile 'com.amazonaws:aws-java-sdk:1.11.548'
+    compile 'com.amazonaws:aws-java-sdk:1.11.597'
+}
+
+jar {
+    manifest {
+        attributes 'Main-Class': "$mainClassName"
+    }
+}
+
+shadowJar {
+    zip64 true
 }
 
 test {
