--- a/build.gradle
+++ b/build.gradle
@@ -13,8 +13,6 @@ dependencies {
     compileOnly "com.github.h908714124:jbock-annotations:2.2"
     testCompile "org.junit.jupiter:junit-jupiter:5.5.1"
     annotationProcessor "com.github.h908714124:jbock:2.7.2"
-    compile 'org.apache.logging.log4j:log4j-api:2.11.2'
-    compile 'org.apache.logging.log4j:log4j-core:2.11.2'
     compile 'com.amazonaws:aws-java-sdk:1.11.597'
 }
 
@@ -38,13 +36,13 @@ compileJava {
 
     doFirst {
         // make sure that directory exists
-        file(new File(projectDir, "/src/main/generated/java")).mkdirs()
+        file("$projectDir/src/main/generated/java").mkdirs()
     }
 }
 
 clean.doLast {
     // clean-up directory when necessary
-    file(new File(projectDir, "/src/main/generated")).deleteDir()
+    file("$projectDir/src/main/generated").deleteDir()
 }
 
 sourceSets {
